--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
           python-version: 3.9
 
       - name: Installing pylint
-        run: pip install pylint flask
+        run: pip install pylint flask requests
 
       - name: Running pylint
         run: pylint src/main/python/app.py
@@ -42,7 +42,7 @@ jobs:
       - name: Installing pylint
         run: |
           python -m pip install --upgrade pip
-          pip install pybuilder flask
+          pip install pybuilder flask requests
 
       - name: Build and Test
         run: pyb
