--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ on:
   pull_request:
     branches:
       - main
+    types: [opened, synchronize, reopened]
 
 jobs:
   lint_codecheck:
@@ -22,7 +23,7 @@ jobs:
           python-version: 3.9
 
       - name: Installing pylint
-        run: pip install pylint flask requests
+        run: pip install pylint flask requests flask_wtf
 
       - name: Running pylint
         run: pylint src/main/python/app.py
@@ -42,7 +43,7 @@ jobs:
       - name: Installing pylint
         run: |
           python -m pip install --upgrade pip
-          pip install pybuilder flask requests
+          pip install pybuilder flask requests flask_wtf
 
       - name: Build and Test
         run: pyb
@@ -56,9 +57,14 @@ jobs:
     name: SonarCloud
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checking out Repository
+        uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Setting up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
