--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,8 +2,8 @@ sonar.projectKey=Group27Devops_Assignment1
 sonar.organization=group27devops
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=Assignment1
-#sonar.projectVersion=1.0
+sonar.projectName=Assignment1
+sonar.projectVersion=1.0
 
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
