--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,6 +11,7 @@ sonar.projectVersion=1.0
 sonar.sources=src
 
 sonar.language = py
+sonar.python.version = 3.9
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
